--- a/daterange_filter/templates/daterange_filter/filter.html
+++ b/daterange_filter/templates/daterange_filter/filter.html
@@ -1,5 +1,5 @@
 {% load i18n admin_static %}
-<h3>{% blocktrans with filter_title=title %} By {{ filter_title }} {% endblocktrans %}</h3>
+<h3>{{ title|capfirst }}</h3>
 <style>
     .calendarbox, .clockbox {
         /* Make sure the calendar widget popover displays in front of the sidebar */
@@ -31,9 +31,7 @@
         {#create hidden inputs to preserve values from other filters and search field#}
         {% for k, v in i.get_query.items %}
                 <input type="hidden" name="{{ k }}" value="{{ v }}">
-        {% endfor %}    
-    <input type="submit" value="{% trans "Search" %}">
-    <input type="reset" value="{% trans "Clear" %}">
+        {% endfor %}
     </p>
 </form>
 {% endwith %}
